bk_ida/gccida/g1/mtherr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mtherr/src/real.c:6253:22: error: use of undeclared identifier 'unk_6E2DA4'
v2 = ( const char *)&unk_6E2DA4; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mtherr/src/obj/real.o] Error 1
